--- a/app/src/main/res/layout/activity_add_ticket.xml
+++ b/app/src/main/res/layout/activity_add_ticket.xml
@@ -40,8 +40,8 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/stasiun_tujuan"
-            android:hint="Stasiun Tujuan"
+            android:id="@+id/stasiun_keberangkatan"
+            android:hint="Stasiun Keberangkatan"
             android:background="@drawable/input_white"
             android:padding="12dp"
             android:textSize="15sp"
@@ -61,7 +61,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/stasiun_keberangkatan"
+                android:id="@+id/stasiun_tujuan"
                 android:hint="Stasiun Tujuan"
                 android:background="@drawable/input_white"
                 android:padding="12dp"
@@ -217,6 +217,7 @@
                 android:textSize="15sp"
                 android:layout_marginBottom="10dp"
                 android:textColorHint="@color/gray"/>
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
